--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,12 @@ main {
 
   .header {
     height: 90vh;
+    position: relative;
+  }
+
+  .header-content-two {
+    position: absolute;
+    bottom: 0;
   }
 
   .section {
