Phew! Hope i fixed the header issue!

--- a/src/App.css
+++ b/src/App.css
@@ -111,22 +111,20 @@ main {
   }
 
   .dashboard {
-    height: auto;
+    height: 1000px;
     margin-top: 20px;
-    position: relative;
   }
 
   .header {
-    height: 80vh;
+    height: auto;
   }
 
   .header-content-one {
     margin-top: 2%;
   }
 
-
   .header-content-row {
-    height: 80vh;
+    height: auto;
     flex-direction: column-reverse;
   }
 
